--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -263,7 +263,7 @@ footer.header a:hover {
     left: unset;
     bottom: 0;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 
