--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,7 @@ html {
   --gradient-a: #4D5BCE;
   --gradient-b: #43D9AD;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -38,13 +39,6 @@ button {
 }
 
 #root {
-  height: 100%;
-}
-
-.App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100%;
 }
 
