--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,6 +26,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--primary-a) !important;
   height: 100%;
+  overflow: hidden;
 }
 
 button {
